[desktop] more deprecation warnings