@@ -1,3 +1,21 @@
+/*
+ * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
+ * Copyright (c) 2011-2019, FrostWire(R). All rights reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+
 package org.limewire.setting;
 
 import java.util.Properties;
@@ -30,7 +48,7 @@ public final class ByteSetting extends AbstractNumberSetting<Byte> {
 	ByteSetting(Properties defaultProps, Properties props, String key, 
                 byte defaultByte, byte min, byte max) {
 		super(defaultProps, props, key, String.valueOf(defaultByte), 
-              true, new Byte(min), new Byte(max) );
+              true, min, max);
 	}
         
 	/**
@@ -63,6 +81,6 @@ public final class ByteSetting extends AbstractNumberSetting<Byte> {
         }
     }
     protected Comparable<Byte> convertToComparable(String value) {
-        return new Byte(value);
+        return Byte.valueOf(value);
     }
 }
