@@ -1,3 +1,21 @@
+/*
+ * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
+ * Copyright (c) 2011-2019, FrostWire(R). All rights reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+
 package org.limewire.setting;
 
 import java.util.Properties;
@@ -31,7 +49,7 @@ public final class IntSetting extends AbstractNumberSetting<Integer> {
 	IntSetting(Properties defaultProps, Properties props, String key, 
           int defaultInt, int minRemoteVal, int maxRemoteVal) {
 		super(defaultProps, props, key, String.valueOf(defaultInt), true,
-                            new Integer(minRemoteVal), new Integer(maxRemoteVal));
+				minRemoteVal, maxRemoteVal);
     }
         
 	/**
@@ -65,7 +83,7 @@ public final class IntSetting extends AbstractNumberSetting<Integer> {
     }
     
     protected Comparable<Integer> convertToComparable(String value) {
-        return new Integer(value);
+        return Integer.valueOf(value);
     }
     
     @Override
