@@ -1,3 +1,21 @@
+/*
+ * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
+ * Copyright (c) 2011-2019, FrostWire(R). All rights reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+
 package org.limewire.setting;
 
 import java.util.Properties;
@@ -27,7 +45,7 @@ public class LongSetting extends AbstractNumberSetting<Long> {
 	LongSetting(Properties defaultProps, Properties props, String key, 
                 long defaultLong, long min, long max) {
 		super(defaultProps, props, key, String.valueOf(defaultLong), 
-                                 true, new Long(min), new Long(max) );
+                                 true, min, max);
 	}
         
 	/**
@@ -61,6 +79,6 @@ public class LongSetting extends AbstractNumberSetting<Long> {
     }
     
     protected Comparable<Long> convertToComparable(String value) {
-        return new Long(value);
+        return Long.valueOf(value);
     }
 }
